rust_writer_procedural/tests/ui/impl_mutator_fails_if_mutated_field_isnt_bool_array.stderr
error: Expected a file named mutated being [bool;N] inside struct.
 --> tests/ui/impl_mutator_fails_if_mutated_field_isnt_bool_array.rs:6:8
  |
6 | struct SomeStruct {
  |        ^^^^^^^^^^
